Servel.NET/Assets/css/gallery.css
#gallery {
  background: #333;
  display: none;
  height: 100vh;
  flex-direction: column;
}

body.has-gallery.gallery #gallery {
  display: flex;
}

#content-handle {
  display: none;
  height: 20px;
  flex: none;
}

#gallery.document #content-handle {
  display: block;
}

#content-overlay {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

#gallery.content-handle #content-overlay {
  display: block;
}

#overlay {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  flex-direction: column;
  background-color: #1f1f1fbf;
  color: #e0e0e0;
}

#gallery.overlay #overlay {
  display: flex;
}

#overlay :link {
  color: #e0e0e0;
}

#overlay :visited {
  color: #c1c1c1;
}

#overlay :link:active, #overlay :visited:active {
  color: #ffffff;
}

#overlay > div.spacer {
  flex-grow: 1;
}

#overlay-header {
  padding: 20px;
}

#overlay-header h2 {
  margin-bottom: 0;
}

#controls {
  display: flex;
}

#controls > div {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 80px;
  height: 80px;
  font-size: 40px;
  background-color: #1f1f1f;
  fill: #e0e0e0;
  cursor: pointer;
}

#controls > div:not(.spacer):hover {
  background-color: #0f0f0f;
  fill: #c1c1c1;
}

#controls > div.spacer {
  flex-grow: 1;
  width: auto;
  height: auto;
  cursor: auto;
}

#controls > div > svg {
  width: 52px;
  height: 52px;
  pointer-events: none;
}

#content {
  display: flex;
  align-items: safe center;
  justify-content: safe center;
  flex-grow: 1;
  min-width: 0;
  min-height: 0;
  position: relative;
  overflow: auto;
}

#image, #video, #audio, #document {
  display: none;
  margin: 0 auto 0 auto;
  touch-action: none;
}

#video:focus, #audio:focus {
  outline: none;
}

#audio {
  width: 100%;
  margin: 0 130px 0 110px;
}

#document {
  color: #000000;
  background-color: #ffffff;
  border: none;
}

#gallery.video #video {
  display: block;
}

#gallery.image #image {
  display: block;
}

#gallery.audio #audio {
  display: block;
}

#gallery.document #document {
  display: block;
}

#gallery.contain #image, #gallery.contain #video, #gallery.contain #audio, #gallery.contain #document {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

#gallery.contain #audio {
  height: revert;
}

#gallery.fit-both #image, #gallery.fit-both #video, #gallery.fit-both #audio, #gallery.fit-both #document {
  max-width: 100%;
  max-height: 100%;
  object-fit: scale-down;
}

#gallery.fit-width #image, #gallery.fit-width #video, #gallery.fit-width #audio, #gallery.fit-width #document {
  max-width: 100%;
}

#gallery.clamp-width #image, #gallery.clamp-width #video, #gallery.clamp-width #audio, #gallery.clamp-width #document {
  max-width: 1000px;
}

@media screen and (max-width: 767px) {
  #gallery.video, #gallery.audio, #gallery.document {
    padding: 0;
  }

  #controls {
    font-size: 30px;
  }

  #controls > div {
    width: 60px;
    height: 60px;
  }

  #audio {
    margin: 0 90px 0 70px;
  }
}

@media screen and (max-width: 479px) {
  #page-back-10 {
    display: none;
  }

  #page-next-10 {
    display: none;
  }
}

